<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="listener"
            type="android.view.View.OnClickListener"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorPrimary">

        <LinearLayout
            android:id="@+id/llRoles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSiswa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/_4sdp"
                android:onClick="@{listener}"
                android:text="@string/button_label_role_siswa"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                app:backgroundTint="?attr/colorSecondary" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnGuru"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/_4sdp"
                android:onClick="@{listener}"
                android:text="@string/button_label_role_guru"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                app:backgroundTintMode="add"
                app:backgroundTint="?attr/colorPrimarySurface" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnUmum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="@{listener}"
                android:text="@string/button_label_role_umum"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                app:backgroundTintMode="add"
                app:backgroundTint="?attr/colorPrimarySurface"  />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAdmin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:onClick="@{listener}"
                android:text="@string/button_label_role_admin"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:visibility="gone"
                tools:visibility="visible"
                app:backgroundTintMode="add"
                app:backgroundTint="?attr/colorPrimarySurface" />

        </LinearLayout>

        <ScrollView
            android:layout_marginTop="@dimen/_26sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/btnSignUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llRoles">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:paddingStart="@dimen/_30sdp"
                android:paddingEnd="@dimen/_30sdp"
                android:layout_height="wrap_content">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_4sdp"
                    android:gravity="start"
                    android:text="@string/label_nama_lengkap"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    android:textColor="?attr/colorOnPrimary" />

                <EditText
                    android:id="@+id/etNamaLengkap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/cardview_light_background"
                    android:padding="@dimen/_5sdp"
                    android:inputType="text"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:textColor="?attr/colorOnPrimary" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_4sdp"
                    android:gravity="start"
                    android:text="@string/label_email"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    android:textColor="?attr/colorOnPrimary" />

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/cardview_light_background"
                    android:padding="@dimen/_5sdp"
                    android:inputType="textEmailAddress"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:textColor="?attr/colorOnPrimary" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_4sdp"
                    android:gravity="start"
                    android:text="@string/label_password"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    android:textColor="?attr/colorOnPrimary" />

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/cardview_light_background"
                    android:padding="@dimen/_5sdp"
                    android:inputType="textPassword"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:textColor="?attr/colorOnPrimary" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_4sdp"
                    android:gravity="start"
                    android:text="@string/label_password_repeat"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    android:textColor="?attr/colorOnPrimary" />

                <EditText
                    android:id="@+id/etPasswordRepeat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/cardview_light_background"
                    android:padding="@dimen/_5sdp"
                    android:inputType="textPassword"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:textColor="?attr/colorOnPrimary" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_4sdp"
                    android:gravity="start"
                    android:text="@string/label_nuptk"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    android:textColor="?attr/colorOnPrimary" />

                <EditText
                    android:id="@+id/etNUPTK"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/cardview_light_background"
                    android:padding="@dimen/_5sdp"
                    android:inputType="text"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:textColor="?attr/colorOnPrimary" />


            </LinearLayout>

        </ScrollView>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_16sdp"
            android:onClick="@{listener}"
            android:text="@string/button_label_sign_up"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            app:backgroundTint="?attr/colorSecondary"
            app:layout_constraintBottom_toTopOf="@+id/llLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />


        <LinearLayout
            android:id="@+id/llLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_38sdp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_sudah_punya_akun"
                android:textAppearance="?attr/textAppearanceSubtitle2"
                android:textColor="?attr/colorOnPrimary" />

            <TextView
                android:id="@+id/tvSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:padding="@dimen/_8sdp"
                android:onClick="@{listener}"
                android:text="@string/button_label_sign_in_underline"
                android:textAppearance="?attr/textAppearanceSubtitle2"
                android:textColor="?attr/colorOnPrimary"
                android:textStyle="bold" />


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

