<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="listener"
            type="android.view.View.OnClickListener"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorPrimary">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_marginTop="@dimen/_30sdp"
            app:layout_constraintBottom_toTopOf="@+id/llContent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_big_logo" />

        <LinearLayout
            android:id="@+id/llContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:orientation="vertical"
            android:padding="@dimen/_30sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_name"
                android:textAppearance="?attr/textAppearanceHeadline1"
                android:textColor="?attr/colorOnPrimary" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_18sdp"
                android:gravity="center"
                android:text="@string/label_e_learning"
                android:textAppearance="?attr/textAppearanceHeadline2"
                android:textColor="?attr/colorOnPrimary" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_4sdp"
                android:gravity="start"
                android:text="@string/label_email"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textColor="?attr/colorOnPrimary" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_8sdp"
                app:cardBackgroundColor="@color/cardview_light_background"
                app:cardCornerRadius="8dp">

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:padding="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:inputType="text"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    android:textColor="?attr/colorPrimary" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_4sdp"
                android:gravity="start"
                android:text="@string/label_password"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textColor="?attr/colorOnPrimary" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_20sdp"
                app:cardBackgroundColor="@color/cardview_light_background"
                app:cardCornerRadius="8dp">

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:padding="@dimen/_5sdp"
                    android:inputType="textPassword"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    android:textColor="?attr/colorPrimary" />

            </androidx.cardview.widget.CardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_16sdp"
                android:onClick="@{listener}"
                android:text="@string/button_label_sign_in"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                app:backgroundTint="?attr/colorSecondary" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_siswa_baru"
                    android:textAppearance="?attr/textAppearanceSubtitle2"
                    android:textColor="?attr/colorOnPrimary" />

                <TextView
                    android:id="@+id/tvSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="@dimen/_8sdp"
                    android:onClick="@{listener}"
                    android:text="@string/button_label_sign_up_underline"
                    android:textAppearance="?attr/textAppearanceSubtitle2"
                    android:textColor="?attr/colorOnPrimary"
                    android:textStyle="bold" />


            </LinearLayout>

            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:layout_gravity="center"
                android:padding="@dimen/_2sdp"
                android:onClick="@{listener}"
                android:text="@string/button_label_forgot_password_underline"
                android:textAppearance="?attr/textAppearanceSubtitle2"
                android:textColor="?attr/colorOnPrimary"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

